--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@
 
     /* Status Colors */
     --success: 142 72% 29%;
+    --destructive: 0 84% 60%;
     --warning: 32 96% 48%;
     --error: 0 84% 60%;
 
